mgmt: add context-values API endpoints
